bynkc/tests/fixtures/positive/23_constructor_call/input.karn
commons test {
  type Reps = Int where InRange(1, 100)

  fn make(n: Int) -> Result[Reps, ValidationError] {
    Reps.of(n)
  }
}
