bynkc/tests/fixtures/negative/23_unknown_constructor/input.karn
commons test {
  type Reps = Int where InRange(1, 100)

  fn f(n: Int) -> Result[Reps, ValidationError] {
    Reps.parse(n)
  }
}
